--- a/exposiciones.html
+++ b/exposiciones.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <title>Exposiciones · La Galería Ecléctica</title>
@@ -11,20 +11,18 @@
 <header class="bg-verde-oscuro">
     <div class="cabecera-top">
         <div>
-            <a href="donar.html">Donaciones</a>
-        </div>
-        <div>
             <a href="#">ES</a>
             <a href="#">CA</a>
             <a href="#">EN</a>
         </div>
     </div>
     <a href="index.html">
-        <img src="assets/img/logo.png" />
+        <img alt="Logo de LAGaEc.Enlace que te lleva a la página de inicio" src="assets/img/logo.png"/>
     </a>
     <nav class="navbar navbar-expand-lg navbar-light bg-verde-claro">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup">
             <span class="navbar-toggler-icon"></span>
+            Menú de enlaces
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
@@ -32,6 +30,7 @@
                 <a class="nav-item nav-link active" href="exposiciones.html">Exposiciones <span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link" href="#">Actividades</a>
                 <a class="nav-item nav-link" href="#">Revista</a>
+                <a class="nav-item nav-link" href="donar.html">Donaciones</a>
             </div>
         </div>
     </nav>
@@ -51,22 +50,27 @@
 </header>
 
 <main class="container-fluid">
+    <section class="exposiciones-cabecera">
+        <div class="container">
+            <h1>Exposiciones</h1>
+        </div>
+    </section>
     <section id="actual" class="exposiciones container">
         <h2> Exposiciones actuales</h2>
         <div class="fila align-izquierda">
             <div class="cuatro-columnas">
                 <a href="expo-detalle.html">
-                    <img src="assets/img/expo-cezanne.jpg" />
+                    <img alt="Foto sobre el artículo 'Impresiones'." src="assets/img/expo-cezanne.jpg" />
+                    <p>De 02/12/2018 a 17/04/2019</p>
+                    <h3>Impresiones </h3>
                 </a>
-                <p>De 02/12/2018 a 17/04/2019</p>
-                <a href="expo-detalle.html"><h3>Impresiones </h3></a>
             </div>
             <div class="cuatro-columnas">
                 <a href="#">
-                    <img src="assets/img/expo-caravaggio.jpg"/>
+                    <img alt="Foto sobre el artículo 'Caravaggio: el pintor del claroscuro'." src="assets/img/expo-caravaggio.jpg"/>
+                    <p>De 03/12/2018 a 17/05/2019</p>
+                    <h3>Caravaggio: el pintor del claroscuro </h3>
                 </a>
-                <p>De 03/12/2018 a 17/05/2019</p>
-                <a href="#"> <h3>Caravaggio: el pintor del claroscuro </h3></a>
             </div>
         </div>
     </section>
@@ -76,21 +80,22 @@
         <div class="fila align-izquierda">
             <div class="cuatro-columnas">
                 <a href="#">
-                    <img src="assets/img/expo-terracota.jpg"/>
+                    <img alt="Foto sobre el artículo 'Terracotas'." src="assets/img/expo-terracota.jpg"/>
+                    <p>De 18/05/2019 a 18/06/2019</p>
+                    <h3>Terracotas </h3>
                 </a>
-                <p>De 18/05/2019 a 18/06/2019</p>
-                <a href="#"> <h3>Terracotas </h3></a>
             </div>
             <div class="cuatro-columnas">
                 <a href="#">
-                    <img src="assets/img/expo-cezanne.jpg"/>
+                    <img alt="Foto sobre el artículo 'Cézanne: el padre de la modernidad'." src="assets/img/expo-cezanne.jpg"/>
+                
+                    <p>De 18/05/2019 a 17/07/2019</p>
+                    <h3>Cézanne: el padre de la modernidad </h3>
                 </a>
-                <p>De 18/05/2019 a 17/07/2019</p>
-                <a href="#"> <h3>Cézanne: el padre de la modernidad </h3></a>
             </div>
             <div class="cuatro-columnas">
                 <a href="#">
-                    <img src="assets/img/expo-storytelling.jpg"/>
+                    <img alt="Foto sobre el artículo 'Storytelling, los artistas comparten historias'."src="assets/img/expo-storytelling.jpg"/>
                 </a>
                 <p>De 19/06/2019 a 20/09/2019 </p>
                 <a href="#"> <h3>Storytelling, los artistas comparten historias</h3></a>
@@ -103,31 +108,31 @@
         <div class="fila align-izquierda">
             <div class="cuatro-columnas">
                 <a href="#">
-                    <img src="assets/img/expo-rostro-humano.jpg" />
+                    <img alt="Foto sobre el artículo 'El rostro humano en el arte'."src="assets/img/expo-rostro-humano.jpg" />
                 </a>
                 <a href="#"> <h3>El rostro humano en el arte</h3></a>
             </div>
             <div class="cuatro-columnas">
                 <a href="#">
-                    <img src="assets/img/expo-vangogh.jpg" />
+                    <img alt="Foto sobre el artículo 'El color, esencia del arte'."src="assets/img/expo-vangogh.jpg" />
                 </a>
                 <a href="#"> <h3>El color, esencia del arte</h3></a>
             </div>
             <div class="cuatro-columnas">
                 <a href="#">
-                    <img src="assets/img/expo-pintores-holandeses.jpg"/>
+                    <img alt="Foto sobre el artículo 'Pintores holandeses'."src="assets/img/expo-pintores-holandeses.jpg"/>
                 </a>
                 <a href="#"> <h3>Pintores holandeses</h3></a>
             </div>
             <div class="cuatro-columnas">
                 <a href="#">
-                    <img src="assets/img/expo-goya.jpg" />
+                    <img alt="Foto sobre el artículo 'Goya, el sueño de la razón...'."src="assets/img/expo-goya.jpg" />
                 </a>
                 <a href="#"> <h3>Goya, el sueño de la razón...</h3></a>
             </div>
             <div class="cuatro-columnas">
                 <a href="#">
-                    <img src="assets/img/expo-manuscritos.jpg" />
+                    <img alt="Foto sobre el artículo 'Manuscritos'."src="assets/img/expo-manuscritos.jpg" />
                 </a>
                 <a href="#"> <h3>Manuscritos</h3></a>
             </div>
@@ -156,16 +161,17 @@
         <form>
             <h4>Suscríbete a nuestra Newsletter</h4>
             <div class="form-group">
-                <input type="email" class="form-control" id="exampleInputEmail1"  placeholder="Enter email">
+                <label for="email">Email:</label>
+                <input id="email" name="email" type="email" class="form-control" placeholder="Enter email">
             </div>
             <div class="form-group form-check">
-                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">Acepto la <a href="#">Política de privacidad </a></label>
+                <input id="privacity" name="privacity"type="checkbox" class="form-check-input">
+                <label for="privacity"class="form-check-label">Acepto la <a href="#">Política de privacidad </a></label>
             </div>
             <button type="submit" class="btn btn-secondary">Registrarme</button>
         </form>
         <a href="index.html" class="logo">
-            <img src="assets/img/logo.png" alt="logo" title="logo"/>
+            <img alt="Logo de LAGaEc.Enlace que te lleva a la página de inicio." src="assets/img/logo.png" title="logo"/>
         </a>
         <nav class="navbar navbar-expand-lg navbar-light bg-verde-claro">
             <div class="navbar-nav">
@@ -178,7 +184,7 @@
 
     </div>
     <div class="creditos">
-        <h6>Créditos</h6>
+        <h5>Créditos</h5>
         <p>© LAGaEC. Imágenes de las obras artísticas de dominio público,
             <a href="https://www.metmuseum.org/art/collection/search#!?searchField=All&showOnly=openAccess&sortBy=relevance&offset=0&pageSize=0">The Metropolitan Museum</a>.
             Fotografías, <a href="https://unsplash.com">Unsplash</a>
